# fastapi-tdd-docker

./: .gitignore  docker-compose.yml
project/: Dockerfile  pyproject.toml
project/app/: config.py  main.py
