[tool.poetry]
name = "fastapi-tdd-docker"
version = "0.1.0"
description = ""
authors = ["Harold Mendoza <slu.mendozaharold@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.70.1"
uvicorn = "0.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
